--- a/pb.html
+++ b/pb.html
@@ -1014,24 +1014,25 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>jailbreak</title></head><body><article class="markdown-body"><p>随着<strong>iPhone、iPad</strong>在大陆的迅速兴起，使得很多国人也能享受到<strong>Apple</strong>为我们生活带来的便捷与乐趣，于此同时，与<strong>iOS</strong>相伴而生的<strong>Jailbreak（越狱）</strong>也随之进入人们的视野。不过我发现身边很多iPhone用户对越狱有着很深的误解，其中大部分人不知道如何越狱、越狱有什么用，所以借此机会分享一下我的见解。</p>
-<h2 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>什么是越狱？为什么要越狱？越狱有什么用？</h2>
+</style><title>jailbreak</title></head><body><article class="markdown-body"><h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>越狱 ≠ 盗版</h1>
+<p>随着<strong>iPhone、iPad</strong>在大陆的迅速兴起，使得很多国人也能享受到<strong>Apple</strong>为我们生活带来的便捷与乐趣，于此同时，与<strong>iOS</strong>相伴而生的<strong>Jailbreak（越狱）</strong>也随之进入人们的视野。不过我发现身边很多iPhone用户对越狱有着很深的误解，其中大部分人不知道如何越狱、越狱有什么用，所以借此机会分享一下我的见解。</p>
+<h3 id="_2"><a name="user-content-_2" href="#_2" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>什么是越狱？为什么要越狱？越狱有什么用？</h3>
 <p>解释这三个问题之前大家要清楚<strong>App Store</strong>的运行方式，它限制iOS用户只能通过此渠道获取应用及其更新。越狱的出现打破了这个限制，使得用户可以获得更高的权限来安装App Store以外的应用程序，从而使我们的iDevices更加智能，简单来说就是逃出App Store这座“监狱”。虽说这座监狱好处颇多，但有时为了获得更多的自由需要一些手段。</p>
 <p>当然，Apple十分不希望这样的情况发生，所以<strong>Jailbreakers</strong>与Apple之间猫捉老鼠的游戏日益激烈，Apple通过固件更新封堵漏洞，Jailbreakers继续寻找新的漏洞加以利用。比较出名的Jailbreaker例如神奇小子<strong><em>GeoHot</em></strong>，第一位实现初代iPhone越狱的人，当时年仅17岁，现在入职Facebook；<strong><em>Dev Team</em></strong>，其中MuscleNerd、comex都是在越狱界很有名气的人物，comex的代表作<strong>JailbreakMe</strong>，号称最简单的越狱方式。</p>
 <p>在很多国人手中，买到iPhone时就要越狱，这已经成为“标配”，因为他们觉得不越狱就无法下载安装免费的应用！这种想法是非常错误的，甚至让人鄙视，越狱≠盗版，越狱只是让你获得更多的空间施展拳脚，一般来讲越狱完以后越狱工具会自动帮你安装好一个名字叫做<strong><em>Cydia</em></strong>的程序。Cydia和App Store类似，是一个应用商店，但它的功能不仅仅局限于商店，它有很多附加功能，比如查看系统储存详情、安装购买主题等等。Cydia里有免费的程序，当然也有需要付费的，它可以通过添加源的方式进行安装，也可以在Cydia Store里购买。因为App Store的审核方式，部分程序无法上架，但是却又非常实用，只好通过其他平台发布，这个平台就是Cydia，这是Jailbreak的根本目的。</p>
-<h2 id="_2"><a name="user-content-_2" href="#_2" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a></h2>
+<h2 id="_3"><a name="user-content-_3" href="#_3" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a></h2>
 <p>中国的软件流通，几乎以<strong>盗版</strong>为主，这让开发者十分苦恼，也使得中国很难出现优质的程序及开发团队，这是一种恶性循环，必须遏制。这需要我们提高认识与觉悟，支持<strong>正版</strong>，如此才能使用到更多优秀的应用。在这里我要说，你都花5000多块钱买一部iPhone了，还在乎几十元买几个应用吗？如果你说在乎、不舍得花这几十块钱，我会跟你说：“你不配拥有这个的设备”！不过以目前的状况，想要普及正版意识还是很困难的，我们可以先买一些自己支付得起的、日常用得到的程序。如果你觉得这个应用值它的售价，就应该买下它。从我们自身做起，逐步改善市场状况。</p>
 <hr />
 <p>下面介绍几款Cydia里的App，普遍用到的就是<strong><em>Sbsettings</em></strong>，系统快捷键集合，包括Wifi，3G，Data等，还可以自定义一些手势来激活不同的功能，很实用。<strong><em>Multifl0w</em></strong>，多任务管理，用户界面十分友好，比系统自带的多任务要直观很多。</p>
 <p><strong>Sbsettings: </strong></p>
-<p><img alt="Sbsettings" src="http://ysu.io/images/sbsettings.png" /></p>
+<p><img alt="Sbsettings" src="http://leoparddennis.github.io/images/sbsettings.png" /></p>
 <p><strong>Cydia主界面: </strong></p>
-<p><img alt="Home" src="http://ysu.io/images/home.png" /></p>
+<p><img alt="Home" src="http://leoparddennis.github.io/images/images/home.png" /></p>
 <p><strong>软件源添加方式: </strong></p>
-<p><img alt="Repo" src="http://ysu.io/images/repo.png" /></p>
+<p><img alt="Repo" src="http://leoparddennis.github.io/images/repo.png" /></p>
 <p><strong>Cydia Store: </strong></p>
-<p><img alt="Store" src="http://ysu.io/images/store.png" /></p>
+<p><img alt="Store" src="http://leoparddennis.github.io/images/store.png" /></p>
 <p><strong>Multifl0w: </strong></p>
-<p><img alt="Multifl0w" src="http://ysu.io/images/multifl0w.png" /></p>
+<p><img alt="Multifl0w" src="http://leoparddennis.github.io/images/multifl0w.png" /></p>
 <hr />
 <p>By Dennis, Apr. 2012  </p></article></body></html>
