--- a/pb.html
+++ b/pb.html
@@ -1014,7 +1014,7 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>jailbreak</title></head><body><article class="markdown-body"><h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>越狱 ≠ 盗版</h1>
+</style><title>越狱 ≠ 盗版</title></head><body><article class="markdown-body"><h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>越狱 ≠ 盗版</h1>
 <p>随着<strong>iPhone、iPad</strong>在大陆的迅速兴起，使得很多国人也能享受到<strong>Apple</strong>为我们生活带来的便捷与乐趣，于此同时，与<strong>iOS</strong>相伴而生的<strong>Jailbreak（越狱）</strong>也随之进入人们的视野。不过我发现身边很多iPhone用户对越狱有着很深的误解，其中大部分人不知道如何越狱、越狱有什么用，所以借此机会分享一下我的见解。</p>
 <h3 id="_2"><a name="user-content-_2" href="#_2" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>什么是越狱？为什么要越狱？越狱有什么用？</h3>
 <p>解释这三个问题之前大家要清楚<strong>App Store</strong>的运行方式，它限制iOS用户只能通过此渠道获取应用及其更新。越狱的出现打破了这个限制，使得用户可以获得更高的权限来安装App Store以外的应用程序，从而使我们的iDevices更加智能，简单来说就是逃出App Store这座“监狱”。虽说这座监狱好处颇多，但有时为了获得更多的自由需要一些手段。</p>
@@ -1027,7 +1027,7 @@ body .markdown-body
 <p><strong>Sbsettings: </strong></p>
 <p><img alt="Sbsettings" src="http://leoparddennis.github.io/images/sbsettings.png" /></p>
 <p><strong>Cydia主界面: </strong></p>
-<p><img alt="Home" src="http://leoparddennis.github.io/images/images/home.png" /></p>
+<p><img alt="Home" src="http://leoparddennis.github.io/images/home.png" /></p>
 <p><strong>软件源添加方式: </strong></p>
 <p><img alt="Repo" src="http://leoparddennis.github.io/images/repo.png" /></p>
 <p><strong>Cydia Store: </strong></p>
