--- a/cv.html
+++ b/cv.html
@@ -1018,7 +1018,7 @@ body .markdown-body
 <li>期望薪资：税前月薪4k~6k</li>
 <li>期望城市：天津</li>
 </ul>
-<p style="float: left; margin-left: 60px; margin-top: 8px;"><img alt="image" src="http://ysu.io/images/me.jpg" /></p>
+<p style="float: left; margin-left: 60px; margin-top: 8px;"><img alt="image" src="http://leoparddennis.github.io/images/me.jpg" /></p>
 <hr / style="clear: both;">
 <h1 id="_3"><a name="user-content-_3" href="#_3" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>工作经历</h1>
 <h2 id="20137"><a name="user-content-20137" href="#20137" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>易商互动软件技术咨询有限公司 （2013年7月 ~ ）</h2>
