--- a/cv.html
+++ b/cv.html
@@ -995,7 +995,7 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>Dennis's CV zh_CN</title></head><body><article class="markdown-body"><h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>联系方式</h1>
+</style><title>简历</title></head><body><article class="markdown-body"><h1 id="_1"><a name="user-content-_1" href="#_1" class="headeranchor-link"  aria-hidden="true"><span class="headeranchor"></span></a>联系方式</h1>
 <ul>
 <li>手机：1862 211 8018</li>
 <li>Email：<a href="mailto:forever88959@gmail.com">forever88959@gmail.com</a></li>
