--- a/pb.html
+++ b/pb.html
@@ -1024,15 +1024,15 @@ body .markdown-body
 <p>中国的软件流通，几乎以<strong>盗版</strong>为主，这让开发者十分苦恼，也使得中国很难出现优质的程序及开发团队，这是一种恶性循环，必须遏制。这需要我们提高认识与觉悟，支持<strong>正版</strong>，如此才能使用到更多优秀的应用。在这里我要说，你都花5000多块钱买一部iPhone了，还在乎几十元买几个应用吗？如果你说在乎、不舍得花这几十块钱，我会跟你说：“你不配拥有这个的设备”！不过以目前的状况，想要普及正版意识还是很困难的，我们可以先买一些自己支付得起的、日常用得到的程序。如果你觉得这个应用值它的售价，就应该买下它。从我们自身做起，逐步改善市场状况。</p>
 <hr />
 <p>下面介绍几款Cydia里的App，普遍用到的就是<strong><em>Sbsettings</em></strong>，系统快捷键集合，包括Wifi，3G，Data等，还可以自定义一些手势来激活不同的功能，很实用。<strong><em>Multifl0w</em></strong>，多任务管理，用户界面十分友好，比系统自带的多任务要直观很多。</p>
-<p><strong>Sbsettings: </strong></p>
-<p><img alt="Sbsettings" src="http://leoparddennis.github.io/images/sbsettings.png" /></p>
-<p><strong>Cydia主界面: </strong></p>
-<p><img alt="Home" src="http://leoparddennis.github.io/images/home.png" /></p>
-<p><strong>软件源添加方式: </strong></p>
-<p><img alt="Repo" src="http://leoparddennis.github.io/images/repo.png" /></p>
-<p><strong>Cydia Store: </strong></p>
-<p><img alt="Store" src="http://leoparddennis.github.io/images/store.png" /></p>
-<p><strong>Multifl0w: </strong></p>
-<p><img alt="Multifl0w" src="http://leoparddennis.github.io/images/multifl0w.png" /></p>
+<p style="text-align: center;"><strong>Sbsettings: </strong></p>
+<p style="text-align: center;"><img alt="Sbsettings" src="http://leoparddennis.github.io/images/sbsettings.png" /></p>
+<p style="text-align: center;"><strong>Cydia主界面: </strong></p>
+<p style="text-align: center;"><img alt="Home" src="http://leoparddennis.github.io/images/home.png" /></p>
+<p style="text-align: center;"><strong>软件源添加方式: </strong></p>
+<p style="text-align: center;"><img alt="Repo" src="http://leoparddennis.github.io/images/repo.png" /></p>
+<p style="text-align: center;"><strong>Cydia Store: </strong></p>
+<p style="text-align: center;"><img alt="Store" src="http://leoparddennis.github.io/images/store.png" /></p>
+<p style="text-align: center;"><strong>Multifl0w: </strong></p>
+<p style="text-align: center;"><img alt="Multifl0w" src="http://leoparddennis.github.io/images/multifl0w.png" /></p>
 <hr />
 <p>By Dennis, Apr. 2012  </p></article></body></html>
